website/versioned_docs/version-2.0/api/useCache.md
---
title: useCache()
id: version-2.0-useCache
original_id: useCache
---
```typescript
function useCache<Params extends Readonly<object>, S extends Schema>(
  { select, getFetchKey }: ReadShape<S, Params, any>,
  params: Params | null
): SchemaOf<S> | null;
```

Excellent to use data in the normalized cache without fetching.

* [On Error (404, 500, etc)](https://www.restapitutorial.com/httpstatuscodes.html):
  * Returns previously cached if exists
  * null otherwise
* While loading:
  * Returns previously cached if exists
  * null otherwise

## Example

Using a type guard to deal with null

```tsx
function Post({ id }: { id: number }) {
  const post = useCache(PostResource.detailShape(), { id });
  // post as PostResource | null
  if (!post) return null;
  // post as PostResource (typeguarded)
  // ...render stuff here
}
```

## Useful `FetchShape`s to send

[Resource](./Resource.md#provided-and-overridable-methods) provides these built-in:

- detailShape()
- listShape()

Feel free to add your own [FetchShape](./FetchShape.md) as well.
